--- a/waveloop.html
+++ b/waveloop.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Player</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/js/howler.min.js"></script>
+    <script src="js/howler.min.js"></script>
     <script src="https://kit.fontawesome.com/17ebd3c5f4.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,7 +43,7 @@
 
         </div>
     </div>
-    <script src="/js/player.js"></script>
+    <script src="js/player.js"></script>
 </body>
 
 </html>
