--- a/waveloop.html
+++ b/waveloop.html
@@ -43,7 +43,7 @@
 
         </div>
     </div>
-    <script src="js/player.js"></script>
+    <script src="js/player.js?c=123"></script>
 </body>
 
 </html>
